--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div class="intro">
         <h1>Hi there!</h1>
-        <p class="lead">Click on the button below to get started.<br>You get a random word and you have to guess the possible words in the generated word. The number of inputs available to you indicates how many words are available in the generated word.</p>
+        <p class="lead">Click on the button below to get started.<br>You get a random word and you have to guess the possible words that can be formed from the generated word. The number of input boxes available to you indicates how many words are available in the generated word.</p>
       </div>
 
       <div class="words-and-inputs">
